# dissonance

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  conanfile.txt  dissonance.sh  plots.py
.github/workflows/: cmake.yml
data/analysis/: Beethoven_Symphonies_Side11.json  cirrus.json  hellwach.json  im_that_guy.json  opening.json  power_of_.json  quiver_a_little.json  sonntags.json  under_the_bridge.json
dissonance/data/: mini_fields.json
dissonance/data/analysis/: 01 Before the Beginning.json  1515637736545818423403 Unreachable.json  cirrus.json  jabg.json  minor rain.json
dissonance/logs/: basic-log.txt
dissonance/settings/: music_paths.json  settings.json
python_scripts/: audio_infos.py  plot_audio.py  plots.py  reduce.py  requirements.txt
python_scripts/data/: all_pitches.json  pitches.json
src/: codes.h  costs.h  den.h  field.cc  field.h  game.cc  game.h  graph.h  ki.h  main.cc  player.cc  player.h  soldier.h  units.cc  units.h  utils.cc  utils.h
src/audio/: audio.cc  audio.h
src/client/: client.cc  client.h  client_game.cc  client_game.h  context.h  eventmanager.h
src/client/game/: client_game.cc  client_game.h
src/client/game/print/: drawrer.cc  drawrer.h  view_point.h
src/client/websocket/: client.cc  client.h
src/constants/: codes.h  costs.h  texts.h
src/game/: field.cc  field.h  file_browser.cc  game.cc  game.h
src/objects/: data_structs.h  resource.cc  resource.h  transfer.h  units.cc  units.h
src/player/: audio_ki.cc  audio_ki.h  ki.h  player.cc  player.h
src/print/: drawrer.cc  drawrer.h
src/random/: random.cc  random.h
src/server/: connection.h  server_game.cc  server_game.h  websocket_server.cc  websocket_server.h
src/server/game/: server_game.cc  server_game.h
src/server/game/field/: field.cc  field.h
src/server/game/player/: audio_ai.cc  audio_ai.h  audio_ki.cc  audio_ki.h  ki.h  monto_carlo_ai.cc  monto_carlo_ai.h  monto_carlo_tree.h  player.cc  player.h  statistics.h
src/server/websocket/: connection.h  websocket_server.cc  websocket_server.h
src/share/: defines.h
src/share/audio/: audio.cc  audio.h
src/share/constants/: codes.h  costs.h  texts.h
src/share/objects/: dtos.h  lobby.h  resource.cc  resource.h  transfer.h  units.cc  units.h
src/share/shemes/: commands.cc  commands.h  data.cc  data.h
src/share/tools/: audio_receiver.h  context.h  eventmanager.h  fiboheap.h  fiboqueue.h  graph.h
src/share/tools/random/: random.cc  random.h
src/share/tools/utils/: utils.cc  utils.h
src/utils/: graph.h  utils.cc  utils.h
test/: main.cc  test_audio.cc  test_field.cc  test_game.cc  test_player.cc  test_proto.cc  test_transfer.cc  test_units.cc  test_utils.cc  testing_utils.cc  testing_utils.h
test_data/data/: local_ranking.json  mini_fields.json
test_data/data/analysis/: elle_rond.json
test_data/settings/: music_paths.json  recently_played.json  settings.json
